fix: align Drawer with detroit updates (#74)

--- a/src/overlays/Drawer.scss
+++ b/src/overlays/Drawer.scss
@@ -1,4 +1,7 @@
 .drawer {
+  --body-height: inherit;
+  --content-padding: var(--bloom-s8) var(--bloom-s4) var(--bloom-s4) var(--bloom-s4);
+  --content-height: inherit;
   @apply flex;
   @apply flex-col;
   @apply bg-gray-200;
@@ -94,14 +97,13 @@
 .drawer__body {
   @apply overflow-y-auto;
   @apply relative;
-  //  flex: 1 1 auto;
+  height: var(--body-height);
 }
 
 .drawer__content {
+  padding: var(--content-padding);
+  height: var(--content-height);
   @apply m-auto;
-  @apply px-4;
-  @apply pt-8;
-  @apply pb-4;
   @apply overflow-y-visible;
 }
 
